--- a/personalPortfolio/index.html
+++ b/personalPortfolio/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Portfolio</title>
+    <title>Vite + React</title>
     <!--app-head-->
   </head>
   <body>
     <div id="root"><!--app-html--></div>
-    <script type="module" src="/src/entry-client.tsx"></script>
+    <script type="module" src="/src/entry-client.jsx"></script>
   </body>
 </html>
